force-app/main/default/objects/Donation__c/fields/Cord_Blood__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating the client is donating cord blood.</description>
    <label>Cord Blood</label>
    <type>Checkbox</type>
</CustomField>