force-app/main/default/objects/Donation__c/fields/Cord_Blood_Donation_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Donation_Process_Status__c</fullName>
    <description>Status for the cord blood donation.</description>
    <label>Cord Blood Donation Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sent To Lab</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Sent To Tissue Bank</fullName>
            </value>
            <value>
                <fullName>Declined Consent</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>