force-app/main/default/objects/Donation__c/fields/Cord_Blood_Received__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator when the Cord Blood is received by the lab.</description>
    <label>Cord Blood Received</label>
    <type>Checkbox</type>
</CustomField>