force-app/main/default/objects/Donation__c/fields/Cord_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if this is a cord tissue donation.</description>
    <label>Cord Tissue</label>
    <type>Checkbox</type>
</CustomField>