force-app/main/default/objects/Donation__c/fields/Cord_Tissue_Bank__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Bank__c</fullName>
    <description>Field that will hold the value of the tissue bank that will process the cord tissue.</description>
    <inlineHelpText>Field that will hold the value of the tissue bank that will process the cord tissue.</inlineHelpText>
    <label>Cord Tissue Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Axolotl Biologix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>