force-app/main/default/objects/Donation__c/fields/Cord_Tissue_Received__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator if the Cord Tissue is received by lab.</description>
    <label>Cord Tissue Received</label>
    <type>Checkbox</type>
</CustomField>