force-app/main/default/objects/Donation__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <description>This amount is the difference between the Invoiced and Paid amount.</description>
    <formula>IF(
   AND(
      Invoiced_Amount__c  &gt; 0,
      Paid_Amount__c &gt; 0
   )
,ABS(Invoiced_Amount__c -  Paid_Amount__c) , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>