force-app/main/default/objects/Donation__c/fields/Donation_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Donation_Process_Status__c</fullName>
    <description>This field indicates the current process status for the donation.</description>
    <label>Donation Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Sent To Lab</fullName>
            </value>
            <value>
                <fullName>Disqualified Stored</fullName>
            </value>
            <value>
                <fullName>Sent To Tissue Bank</fullName>
            </value>
            <value>
                <fullName>Declined Consent</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>