force-app/main/default/objects/Donation__c/fields/Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Date__c</fullName>
    <description>This is the date the donation is considered eligible.</description>
    <label>Eligibility Date</label>
    <type>Date</type>
</CustomField>