force-app/main/default/objects/Donation__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <description>The hospital where the donation was taken.</description>
    <inlineHelpText>The hospital where the donation was taken.</inlineHelpText>
    <label>Hospital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jersey Shore University Medical Center</fullName>
            </value>
            <value>
                <fullName>Luminis Health - Anne Arundel Medical Center</fullName>
            </value>
            <value>
                <fullName>Maimonides</fullName>
            </value>
            <value>
                <fullName>Northwell - Long Island Jewish</fullName>
            </value>
            <value>
                <fullName>Northwell - North Shore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>