force-app/main/default/objects/Donation__c/fields/Hospital_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will track if the hospital has been compensated for the donation.</description>
    <inlineHelpText>This field will track if the hospital has been compensated for the donation.</inlineHelpText>
    <label>Hospital Reimbursed</label>
    <type>Checkbox</type>
</CustomField>