force-app/main/default/objects/Donation__c/fields/Hospital_Reimbursed_Cord_Blood__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Reimbursed_Cord_Blood__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will track if the hospital has been compensated for the cord blood donation.</description>
    <inlineHelpText>This field will track if the hospital has been compensated for the cord blood donation.</inlineHelpText>
    <label>Hospital Reimbursed - Cord Blood</label>
    <type>Checkbox</type>
</CustomField>