force-app/main/default/objects/Donation__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>This is the invoice number associated with the donation.</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>