force-app/main/default/objects/Donation__c/fields/Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Amount__c</fullName>
    <description>The amount the tissue bank was invoiced.</description>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>