force-app/main/default/objects/Donation__c/fields/ISBT_2__c.field-meta.xml
<CustomField>
    <fullName>ISBT_2__c</fullName>
    <description>ISBT for the second sample.</description>
    <externalId>true</externalId>
    <inlineHelpText>ISBT for the second sample.</inlineHelpText>
    <label>ISBT 2</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>