force-app/main/default/objects/Donation__c/fields/ISBT_3__c.field-meta.xml
<CustomField>
    <fullName>ISBT_3__c</fullName>
    <description>ISBT for the third sample.</description>
    <externalId>true</externalId>
    <inlineHelpText>ISBT for the third sample.</inlineHelpText>
    <label>ISBT 3</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>