force-app/main/default/objects/Donation__c/fields/ISBT__c.field-meta.xml
<CustomField>
    <fullName>ISBT__c</fullName>
    <description>This is the ISBT Id for this donation. This field is populated from the associated lab record via a flow on lab.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the ISBT Id for this donation.</inlineHelpText>
    <label>ISBT</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>