force-app/main/default/objects/Donation__c/fields/Maternal_Blood_Received__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Blood_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator when Maternal Blood received by lab.</description>
    <label>Maternal Blood Received</label>
    <type>Checkbox</type>
</CustomField>