force-app/main/default/objects/Donation__c/fields/Medical_Records_Received__c.field-meta.xml
<CustomField>
    <fullName>Medical_Records_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to flag when we have received medical records from the client.</description>
    <inlineHelpText>Indicator to flag when we have received medical records from the client.</inlineHelpText>
    <label>Medical Records Received</label>
    <type>Checkbox</type>
</CustomField>