force-app/main/default/objects/Donation__c/fields/Mother_s_Age__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Age__c</fullName>
    <description>Computed age of mother from the date of birth.</description>
    <formula>IF( MONTH(TODAY())&gt;MONTH(Mother_s_Date_Of_Birth__c), YEAR(TODAY())-YEAR(Mother_s_Date_Of_Birth__c), IF(AND(MONTH(TODAY()) = MONTH(Mother_s_Date_Of_Birth__c), DAY(TODAY()) &gt;= DAY(Mother_s_Date_Of_Birth__c)), YEAR(TODAY())-YEAR(Mother_s_Date_Of_Birth__c), (YEAR(TODAY())-YEAR( Mother_s_Date_Of_Birth__c ))-1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Computed age of mother from the date of birth.</inlineHelpText>
    <label>Mother&apos;s Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>