force-app/main/default/objects/Donation__c/fields/Mother_s_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Date_Of_Birth__c</fullName>
    <description>Date of birth of the mother.</description>
    <label>Mother&apos;s Date Of Birth</label>
    <type>Date</type>
</CustomField>