force-app/main/default/objects/Donation__c/fields/Mother_s_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Ethnicity__c</fullName>
    <description>The ethnicity of the mother.</description>
    <label>Mother&apos;s Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Central or South American</fullName>
            </value>
            <value>
                <fullName>Declined to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>