force-app/main/default/objects/Donation__c/fields/Mother_s_Race__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Race__c</fullName>
    <description>Race of the mother.</description>
    <label>Mother&apos;s Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Declined to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>