force-app/main/default/objects/Donation__c/fields/Number_of_Births__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Births__c</fullName>
    <description>This is the number of births for the donation.</description>
    <label>Number of Births</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Twins</fullName>
            </value>
            <value>
                <fullName>Triplets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>