force-app/main/default/objects/Donation__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Date the donation was paid for by the tissue processor.</description>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>