force-app/main/default/objects/Donation__c/fields/Placenta_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Tissue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if this is a Placenta Tissue donation.</description>
    <label>Placenta Tissue</label>
    <type>Checkbox</type>
</CustomField>