force-app/main/default/objects/Donation__c/fields/Placenta_Tissue_Received__c.field-meta.xml
<CustomField>
    <fullName>Placenta_Tissue_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator if the tissue is received by lab.</description>
    <label>Placenta Tissue Received</label>
    <type>Checkbox</type>
</CustomField>