force-app/main/default/objects/Donation__c/fields/Sent_To_Lab_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Lab_Date__c</fullName>
    <description>This is the date when the donation was set to Sent To Lab.</description>
    <label>Sent To Lab Date</label>
    <type>Date</type>
</CustomField>