force-app/main/default/objects/Donation__c/fields/Sent_To_Tissue_Bank_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Tissue_Bank_Date__c</fullName>
    <description>Date the donation status was set to Sent To Tissue Bank.</description>
    <label>Sent To Tissue Bank Date</label>
    <type>Date</type>
</CustomField>