force-app/main/default/objects/Donation__c/fields/Tissue_Bank__c.field-meta.xml
<CustomField>
    <fullName>Tissue_Bank__c</fullName>
    <description>Tissue bank for the donation.</description>
    <label>Tissue Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amnion LLC</fullName>
            </value>
            <value>
                <fullName>Berkeley Biologics</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Stability Biologics</fullName>
            </value>
            <value>
                <fullName>Surgenex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>