force-app/main/default/objects/Donation__c/fields/Tissue_Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>Tissue_Denial_Date__c</fullName>
    <description>This is the date the tissue status was marked not Eligible</description>
    <label>Tissue Denial Date</label>
    <type>Date</type>
</CustomField>