force-app/main/default/objects/Donation__c/fields/Tissue_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tissue_Denial_Reason__c</fullName>
    <description>The reason the donation was set to ineligible by the tissue bank.</description>
    <inlineHelpText>The reason the donation was set to ineligible by the tissue bank.</inlineHelpText>
    <label>Tissue Denial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>