force-app/main/default/objects/Donation__c/fields/Tissue_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Tissue_Eligibility_Status__c</fullName>
    <description>This is the status of the tissue donation.</description>
    <inlineHelpText>This is the status of the tissue donation.</inlineHelpText>
    <label>Tissue Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>