force-app/main/default/objects/Donation__c/fields/Type_of_Admission__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Admission__c</fullName>
    <description>Type of admission for the donation.</description>
    <label>Type of Admission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Triage</fullName>
            </value>
            <value>
                <fullName>Induction</fullName>
            </value>
            <value>
                <fullName>C-section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>