force-app/main/default/objects/Donation__c/validationRules/Invoiced_Must_Have_Tissue_Bank.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoiced_Must_Have_Tissue_Bank</fullName>
    <active>true</active>
    <description>The tissue bank must be set if setting status to Invoiced.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Tissue_Bank__c,&apos;&apos;),
ISPICKVAL(Donation_Process_Status__c,&apos;Invoiced&apos;),
NOT($Setup.Americord_Settings__c.Bypass_Validation_Rule__c)
)</errorConditionFormula>
    <errorDisplayField>Tissue_Bank__c</errorDisplayField>
    <errorMessage>You must set a tissue bank when setting the status to Invoiced.</errorMessage>
</ValidationRule>