force-app/main/default/objects/Donation__c/validationRules/Require_Eligibility_Status_When_Invoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Eligibility_Status_When_Invoiced</fullName>
    <active>true</active>
    <description>Force user to enter an eligibility status when the donation is invoiced.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Tissue_Eligibility_Status__c ,&apos;&apos;), NOT(ISNULL(Invoice_Date__c)),
NOT($Setup.Americord_Settings__c.Bypass_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>You must enter a value in Tissue Eligibility Status when Invoice Date is set.</errorMessage>
</ValidationRule>