force-app/main/default/objects/Donation__c/validationRules/Require_Eligible_When_Sent_To_Bank.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Eligible_When_Sent_To_Bank</fullName>
    <active>true</active>
    <description>Require that the tissue status be set to Eligible when setting the donation status to Sent To Tissue Bank.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Donation_Process_Status__c, &apos;Sent To Tissue Bank&apos;),
NOT(ISPICKVAL( Tissue_Eligibility_Status__c ,&apos;Eligible&apos;)),
NOT($Setup.Americord_Settings__c.Bypass_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>You must set the Tissue Eligibility Status to Eligible when setting the Donation Process Status to Sent To Tissue Bank.</errorMessage>
</ValidationRule>