force-app/main/default/objects/Donation__c/validationRules/Tissue_Denial_Reason_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Tissue_Denial_Reason_Check</fullName>
    <active>true</active>
    <description>Check to make sure the tissue denial reason field is filled in when setting to Ineligible.</description>
    <errorConditionFormula>AND(
    ISPICKVAL( Tissue_Eligibility_Status__c ,&apos;Ineligible&apos;),
    ISBLANK(Tissue_Denial_Reason__c),
    NOT($Setup.Americord_Settings__c.Bypass_Validation_Rule__c)
)</errorConditionFormula>
    <errorDisplayField>Tissue_Eligibility_Status__c</errorDisplayField>
    <errorMessage>You must enter a denial reason when setting Tissue Eligibility to Ineligible.</errorMessage>
</ValidationRule>