force-app/main/default/objects/Donation__c/validationRules/Tissue_Not_Eligible_When_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>Tissue_Not_Eligible_When_Credit</fullName>
    <active>true</active>
    <description>Validate that the tissue is not eligible when setting a credit amount.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL( Tissue_Eligibility_Status__c ,&apos;Eligible&apos;),
        ISPICKVAL( Tissue_Eligibility_Status__c ,&apos;&apos;)
    ),
    Credit_Amount__c &gt; 0,
    NOT($Setup.Americord_Settings__c.Bypass_Validation_Rule__c)
)</errorConditionFormula>
    <errorMessage>You must set the Tissue Eligibility to Ineligible when setting a credit amount.</errorMessage>
</ValidationRule>