force-app/main/default/objects/Donation__c/listViews/All_Donations_Twins_Only.listView-meta.xml
<ListView>
    <fullName>All_Donations_Twins_Only</fullName>
    <columns>NAME</columns>
    <columns>Donation_Process_Status__c</columns>
    <columns>Tissue_Bank__c</columns>
    <columns>Tissue_Eligibility_Status__c</columns>
    <columns>Tissue_Denial_Reason__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Hospital__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Invoiced_Amount__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>Sent_To_Tissue_Bank_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Births__c</field>
        <operation>equals</operation>
        <value>Twins</value>
    </filters>
    <label>All Donations - Twins Only</label>
</ListView>